@@ -37,6 +37,7 @@ require 'action_mailer/base'
 require 'action_mailer/helpers'
 require 'action_mailer/mail_helper'
 require 'action_mailer/quoting'
+require 'action_mailer/test_helper'
 require 'tmail'
 require 'net/smtp'
 
