@@ -1,0 +1,1 @@
+So, <%= example_format(@text) %>
