@@ -1,1 +1,0 @@
-So, <%= test_format(@text) %>
