@@ -1,5 +1,5 @@
-module TestHelper
-  def test_format(text)
+module ExampleHelper
+  def example_format(text)
     "<em><strong><small>#{text}</small></strong></em>"
   end
 end
